--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>NkdShop - Full Stack eCommerce</title>
+  <title>luv2Shop - Full Stack eCommerce: Angular and Spring Boot</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ic?v=2">
 </head>
 
 <body>
